Work in Progress

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.microproject.microproject/com.microproject.microproject.TomasuloSimulator</mainClass>
+              <mainClass>com.microproject.microproject/com.microproject.microproject.simulator.TomasuloSimulator</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
